<resources>
    <string name="app_name">CALCULADORA Y</string>
    <string name="dato"></string>
    <string name="numero2">Número1</string>
    <string name="mas">+</string>
    <string name="menos">-</string>
    <string name="por">x</string>
    <string name="entre">/</string>
    <string name="calcula">=</string>
    <string name="cero">0</string>
    <string name="nueve">9</string>
    <string name="ocho">8</string>
    <string name="siete">7</string>
    <string name="seis">6</string>
    <string name="cinco">5</string>
    <string name="cuatro">4</string>
    <string name="tres">3</string>
    <string name="dos">2</string>
    <string name="uno">1</string>
    <string name="punto">.</string>
    <string name="borrar">AC</string>
    <string name="calculadora">CALCULADORA</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="inicia_Sesion">Inicia Sesion</string>
    <string name="entrar">Entrar</string>
    <string name="raiz">√</string>
    <string name="exponente">^</string>
    <string name="sen">Sen</string>
    <string name="logaritmo">ln</string>
</resources>
