<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#303030"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:fontFamily="@font/electrolize"
        android:text="@string/inicia_Sesion"
        android:textColor="#EBEBEB"
        android:textSize="45sp" />
    <EditText
        android:id="@+id/usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:textColor="#ffffff"
        android:textColorHint="#d1d1d1"
        android:fontFamily="@font/electrolize"
        android:textSize="30sp"
        android:backgroundTint="@color/colorAccent"
        android:text="FYG"/>
    <EditText
        android:id="@+id/contraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/contraseña"
        android:textColor="#ffffff"
        android:textColorHint="#d1d1d1"
        android:fontFamily="@font/electrolize"
        android:textSize="30sp"
        android:backgroundTint="@color/colorAccent"
        android:text="2425"/>
    <Button
        android:id="@+id/entrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorAccent"
        android:onClick="boton"/>

</LinearLayout>